# hfu-share-webapp

./: .dockerignore  .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.local  LICENCE  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  scripts.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-and-test.yml  create-release.yml  deploy-aws.yml  notify-slack.yml
accommodation_requests/: apps.py  enums.py  forms.py  safeguarding_utils.py  urls.py  views.py
accommodation_requests/tests/: base.py  test_actions_tab.py  test_ar_detail_overview.py  test_close_accommodation_request.py  test_comments_tab.py  test_detail_views_tabs.py  test_download_comments_file.py  test_download_interaction_file.py  test_filters.py  test_history_tab.py  test_linked_records_tab.py  test_list_view.py  test_move_guest.py  test_multi_la_banner.py  test_page_title.py  test_properties_tab.py  test_reassign_handle_error.py  test_rematch_handle_error.py  test_rematch_logging.py  test_reopen_accommodation_request.py  test_safeguarding_checks_form.py  test_safeguarding_checks_tab.py  test_safeguarding_utils.py  test_search.py  test_withdraw_ar_sponsor.py
accommodations/: apps.py  forms.py  urls.py  views.py
accommodations/tests/: test_actions_tab.py  test_detail_views_tabs.py  test_edit.py  test_filters.py  test_history_tab.py  test_linked_records_tab.py  test_list_view.py  test_overview_tab.py  test_page_title.py  test_postcode_search_view.py  test_properties_tab.py  test_search.py
accounts/: admin.py  apps.py  authentication.py  backend.py  enums.py  exceptions.py  forms.py  middleware.py  mixins.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_groupinfo.py  0003_groupinfo_ltla_name.py  0004_groupinfo_gss_code.py  0005_create_ltla_groups.py  0006_groupinfo_is_utla_groupinfo_parent_utla_and_more.py  0007_create_utla_groups.py  0008_accessrequest.py  0009_alter_accessrequest_permissions_and_more.py  0010_remove_accessrequest_permissions_and_more.py  0011_alter_accessrequest_rejection_justification.py  0012_groupinfo_description.py  0013_groupproxy.py  0014_alter_user_managers.py  0015_rename_local_authority_accessrequest_group_info_and_more.py  0016_create_scotland_wales_ltla_and_utla_groups.py  0017_groupinfo_da_gss_code_groupinfo_da_name_and_more.py  0018_create_da_groups.py  0019_accessrequest_da_group_type_and_more.py  0020_groupinfo_group_type.py  0021_create_mhclg_ops_support_groups.py  0022_accessrequest_hidden_by_requester.py  0023_rename_accessrequest_updated_at_and_more.py  0024_accessrequest_access_revoked.py  0025_alter_user_options_user_entra_oid_user_entra_tid_and_more.py  0026_alter_user_first_name_alter_user_last_name.py  0027_update_utla_cumbria_split.py  0028_remove_utla_cumbria.py  0029_alter_accessrequest_group_type_and_more.py  0030_alter_accessrequest_group_type_and_more.py  0031_alter_accessrequest_group_type_and_more.py  0032_create_early_access_groups.py
accounts/models/: AccessRequest.py  GroupInfo.py  GroupProxy.py  User.py  __init__.py
accounts/tests/: base.py  factories.py  test_admin_access_required_mixin.py  test_entra_id.py  test_group_required_mixin.py  test_utils.py
case_management/: asgi.py  context_processors.py  page_title.py  settings.py  urls.py  wsgi.py
case_management/tests/: test_page_title.py
deduplication/: constants.py  exceptions.py  forms.py  models.py  urls.py  views.py
deduplication/migrations/: 0001_initial.py  0002_sponsorduplicategroup_created_at.py  0003_sponsorduplicategroup_source_sponsor_ar_mapping.py  0004_guestduplicategroup.py  0005_accommodationduplicategroup.py  0006_accommodationduplicategroup_archived_at_and_more.py
deduplication/templates/: check_and_complete_records_step.html  deduplicated_records_restored_step.html  review_selected_records_list_step.html  select_accommodation_request_step.html  select_and_review_records_base.html  select_correct_details_step.html  select_duplicate_record_type.html  select_records_list_step.html  undo_deduplicate_records_step.html  view_duplicate_records_list_step.html  view_selected_records_list_step.html
deduplication/tests/: factories.py  test_dedup_logging_helpers.py  test_select_record_type_view.py
downloads/: constants.py  forms.py  helpers.py  urls.py  views.py
downloads/tests/: test_accommodation_download_file.py  test_all_data_download_file.py  test_general_download_view.py  test_guest_download_file.py  test_helpers.py  test_sponsor_download_file.py  test_uam_download_file.py  test_visa_application_download_file.py
guests/: apps.py  forms.py  urls.py  views.py
guests/tests/: test_actions_tab.py  test_detail_overview.py  test_detail_views_tabs.py  test_edit.py  test_filters.py  test_search.py  (+6 more)
hfurb_scripts/: localstack-script.sh
ontology/: admin.py  admin_actions.py  admin_filters.py  admin_forms.py  admin_stats.py  apps.py  mixins.py  signals.py  utils.py
reassignment_requests/: apps.py  forms.py  urls.py  views.py
safeguarding/: apps.py  forms.py  urls.py  views.py
sponsors/: apps.py  forms.py  urls.py  views.py
templates/: 403.html  404.html  500.html  base.html
uams/: apps.py  urls.py  views.py
unassigned_accommodation_requests/: apps.py  urls.py  views.py
user_management/: apps.py  forms.py  urls.py
visa_applications/: apps.py  forms.py  urls.py  views.py
webapp/: admin.py  columns.py  constants.py  context_processors.py  enhanced_sentry_logging.py  fields.py  middleware.py  mixins.py  notify.py  s3.py  search.py  urls.py  utils.py  validators.py  views.py  widgets.py
(+597 files in other folders)
